--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html,
+body {
+  background-color: #0e1414;
+  color: #bfc1c1;
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
